// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RootContainer renders device connect view container when route is deviceConnectView 1`] = `
<DeviceConnectViewContainer
  deps={
    Object {
      "storeHub": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "stores": undefined,
      },
    }
  }
  deviceStoreData={
    Object {
      "deviceConnectState": 2,
    }
  }
  userConfigurationStoreData={
    Object {
      "isFirstTime": true,
    }
  }
/>
`;

exports[`RootContainer renders results view container when route is resultsView 1`] = `
<AutomatedChecksView
  deps={
    Object {
      "storeHub": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "stores": undefined,
      },
    }
  }
  devicePort={11111}
/>
`;

exports[`RootContainer store listening uses the store to update the state: initial state 1`] = `
Object {
  "deviceStoreData": Object {
    "deviceConnectState": 2,
  },
  "userConfigurationStoreData": Object {
    "isFirstTime": true,
  },
  "windowStateStoreData": Object {
    "currentWindowState": "restoredOrMaximized",
    "routeId": "deviceConnectView",
  },
}
`;

exports[`RootContainer store listening uses the store to update the state: updated state 1`] = `
Object {
  "deviceStoreData": Object {
    "deviceConnectState": 2,
  },
  "userConfigurationStoreData": Object {
    "isFirstTime": true,
  },
  "windowStateStoreData": Object {
    "currentWindowState": "restoredOrMaximized",
    "routeId": "resultsView",
  },
}
`;
